[package]
name = "emscripten_test"
version = "0.1.0"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

[build-dependencies]
cc = "1.0.66"